--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -18,16 +18,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
-        "import sys\n",
-        "sys.path.append('../src')\n",
-        "import pandas as pd\n",
-        "from regions_validator import RegionMatcher\n",
-        "import warnings\n",
-        "warnings.filterwarnings('ignore')"
+        "from reg_normalizer import RegionMatcher\n",
+        "import pandas as pd"
       ]
     },
     {
@@ -39,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -68,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -95,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -128,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -176,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -202,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -217,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -369,7 +365,7 @@
               "13                         Тюменская область             100.00  "
             ]
           },
-          "execution_count": 8,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -387,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -403,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -616,7 +612,7 @@
               "13                              Tyumen  71000000   RU-TYU  "
             ]
           },
-          "execution_count": 11,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -634,7 +630,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -673,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -774,7 +770,7 @@
               "8          москва москва                Москва              81.25"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
